@@ -1965,6 +1965,12 @@ for-value   NIL or T
        (* . c-STAR)
        (- . c-MINUS)
        (/ . c-SLASH)
+       (= . c-COMPARE-NUMBERS)
+       (/= . c-COMPARE-NUMBERS)
+       (< . c-COMPARE-NUMBERS)
+       (<= . c-COMPARE-NUMBERS)
+       (> . c-COMPARE-NUMBERS)
+       (>= . c-COMPARE-NUMBERS)
        (SYS::SVSTORE . c-SVSTORE)
        (EQ . c-EQ)
        (EQL . c-EQL)
@@ -6463,6 +6469,32 @@ for-value   NIL or T
                         `(,first-part)
                         `(,first-part ,(/ const-prod))))
                   ,@other-parts))))))
+
+(defun c-COMPARE-NUMBERS ()
+  (test-list *form* 2)
+  (if (= (length *form*) 3)
+      (multiple-value-bind (arg-1 const1-p) (c-constant-number (second *form*))
+        (if (and const1-p (zerop arg-1))
+            (c-form (ecase (first *form*)
+                      (= `(ZEROP ,(third *form*)))
+                      (/= `(NOT (ZEROP ,(third *form*))))
+                      (< `(PLUSP ,(third *form*)))
+                      (<= `(NOT (MINUSP ,(third *form*))))
+                      (> `(MINUSP ,(third *form*)))
+                      (>= `(NOT (PLUSP ,(third *form*))))))
+            (multiple-value-bind (arg-2 const2-p)
+                (c-constant-number (third *form*))
+              (c-GLOBAL-FUNCTION-CALL-form
+               (if (and const2-p (zerop arg-2))
+                   (ecase (first *form*)
+                     (= `(ZEROP ,arg-1))
+                     (/= `(NOT (ZEROP ,arg-1)))
+                     (< `(MINUSP ,arg-1))
+                     (<= `(NOT (PLUSP ,arg-1)))
+                     (> `(PLUSP ,arg-1))
+                     (>= `(NOT (MINUSP ,arg-1))))
+                   `(,(first *form*) ,arg-1 ,arg-2))))))
+      (c-GLOBAL-FUNCTION-CALL (first *form*))))
 
 (defun c-SVSTORE ()
   (test-list *form* 4 4)
